Fixed the URL again

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>ACBC</h1>
     <h2>Alice Churchfield Bondage Club</h2>
     <p>Not much to see here just yet&thinsp;&mdash;&thinsp;check back in soon and I promise I'll at least have some instructions and stuff.</p>
-    <p>For now, enjoy a nice link to <a href="https://github.com/AliceChurchfield/acbc.github.io">the ACBC GitHub repo</a>.</p>
+    <p>For now, enjoy a nice link to <a href="https://github.com/AliceChurchfield/acbc">the ACBC GitHub repo</a>.</p>
   </body>
 </html>
